# physics

./: .gitignore  .gitmodules  2020  CMakeLists.txt  README.md  make.bat  proposal.tex  proposal.txt
engine/core/: build.bat  collision_detection.cpp  collision_resolution.cpp  cuboid_rigidbody.h  engine.cpp  environment.h  rigidbody.h  run.bat  test.cpp
engine/geometry/: matrix.h
geometry/: matrix.h  vector.h
render/: README.md  output  run.bat  test.py
report/dissertation/: chapter1.tex  chapter2.tex  chapter3.tex  chapter4.tex  chapter5.tex  diss.tex  draft  draft.tex  makefile  makefile.txt  proposal.tex  refs.bib  template.tex
report/dissertation/draft/: chapter1.tex  chapter2.tex  chapter4.tex
report/dissertation/evaluation/: nb.ipynb
report/dissertation/evaluation/my/: t.py
report/dissertation/evaluation/sofa/: t1.scn
report/presentation/: src
report/progress/: main.tex  report  src
report/proposal/: candidates.xlsx  evaluation_backup.tex  proposal.tex  proposal_img.py  proposalbib.bib
